[package]
name = "leaf-ffi"
version = "0.1.0"
authors = ["eycorsican <eric.y.corsican@gmail.com>"]
edition = "2018"

[lib]
name = "leaf"
path = "src/lib.rs"

#[target.'cfg(target_os = "android")']
crate-type = ["cdylib"]

#[target.'cfg(target_os = "ios")']
#crate-type = ["staticlib"]

[features]
default = [
    "default-ring",
]

default-ring = [
    "leaf/default-ring",
]

default-openssl = [
    "leaf/default-openssl",
]

auto-reload = ["leaf/auto-reload"]

[dependencies]
leaf = { path = "../leaf", default-features = false, optional = true }
tokio = { version = "1", features = ["rt"] }
futures = "0.3"
jni = "0.19"
[build-dependencies]
bindgen = "0.57"
